Closed
Bug 843048
Opened 13 years ago
Closed 13 years ago
Keyboard does not pop up when tapping password field for Zimbra login
Categories
(Firefox for Android Graveyard :: Keyboards and IME, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Firefox 22
People
(Reporter: zcampbell, Assigned: jchen)
References
Details
Attachments
(1 file)
|
6.46 KB,
patch
|
cpeterson
:
review+
|
Details | Diff | Splinter Review |
Device: Desire HD
Android: 2.3.5 (HTC Sense 3.0)
Firefox: Nightly 22.0a1 (2013-02-20)
IME: Touch Input
STR:
1. Go to Zimbra (mozilla) login page
2. Tap Username to give focus (cursor in Username field)
3. While the Username field still has focus, tap the password field
Actual: Cursor will swap to Password field but the keyboard will close
Expected: Keyboard to avail itself for entrance of password
NB tested this with alternative non-English IMEs and I could not replicate it.
| Reporter | ||
Comment 1•13 years ago
|
||
This can also be replicated just on the gmail.com login page.
| Assignee | ||
Comment 2•13 years ago
|
||
Right now we delay showing/hiding the IME on the Java thread through a 200ms delay, but seems like this can cause cases where we end up hiding the IME instead of showing. This patch moves the delaying process to the Gecko thread, and eliminates the need for a hard-coded 200ms delay.
Attachment #721200 -
Flags: review?(cpeterson)
Comment 3•13 years ago
|
||
Comment on attachment 721200 [details] [diff] [review]
Delay showing/hiding IME on Gecko thread instead of Java thread (v1)
Review of attachment 721200 [details] [diff] [review]:
-----------------------------------------------------------------
LGTM
Attachment #721200 -
Flags: review?(cpeterson) → review+
| Assignee | ||
Comment 4•13 years ago
|
||
Assignee: nobody → nchen
Status: NEW → ASSIGNED
Hardware: Other → ARM
Comment 5•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 22
| Reporter | ||
Comment 6•13 years ago
|
||
This is a great usability fix, thanks jchen!
Updated•5 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•