Bug 843048 - Delay setting IME context on Gecko thread instead of Java thread; r=cpeterson